# Extracting-Supply-Chain-Information-from-News-Articles-Using-Large-Language-Models

./: .gitignore  README.md  pyproject.toml
experiments/0. Dataset Preprocessing/: ManualDataset.ipynb  ManualReducedDataset.ipynb
experiments/1. Relation Classification/: BERT-Entity.ipynb  BERT.ipynb  LLM.ipynb  MLP-BiLSTM.ipynb  RoBERTa-Entity.ipynb  RoBERTa.ipynb  SVM.ipynb
experiments/2. Synthetic Data Generation/: Evaluation.ipynb  JaccardSimilarity.ipynb  TenShotDataset.ipynb  TenShotReducedDataset.ipynb  TwoStageDataset.ipynb  ZeroShotDataset.ipynb  ZeroShotReducedDataset.ipynb
experiments/3. Case Study/: Preprocessing.ipynb  RoBERTA_mining.graphml  RoBERTA_tesla_mining.graphml  Visualize.ipynb
modules/experiment_1/: BertEntity.py  MLP.py  RoBERTaEntity.py  datamodule.py  models.py
modules/llm/: context.py  model.py  template.py
